--- a/help.html
+++ b/help.html
@@ -67,7 +67,7 @@
             target="_blank"
             onclick="myFunction()"
             class="video"
-            href="https://cdn.glitch.global/c4446aae-daa1-42cd-bf30-ea52788b9ae1/51065806-ae8a-4616-a752-0989fcbcd25c.WhatsApp%20Video%202024-06-26%20at%2022.44.29_69eadfd9.mp4?v=171942398614"
+            href="https://cdn.glitch.global/116aac45-aeea-4339-8e11-ec99eca8b56f/detailed_video.mp4?v=1721736922555"
             ><img
               src="https://cdn.glitch.global/0bc5d4f9-c6e3-43c1-941c-b027cb2387a7/download.jfif?v=1695503392834"
               alt=""
